# operation

./: .env  .gitignore  .gitmodules  QUICKSTART.md  README-USAGE-SUMMARY.md  README.md  USAGE.md  docker-compose.README.md  docker-compose.yml  pack-mbtcp.c  packet-mbtcp.h  packet-s7comm.h  packet-tcp.h  replay_loop.sh  shell.sh  start.sh
Parser/: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  debug_modbus_order.cpp  entrypoint-docker.sh  test_ip_length  test_ip_length.cpp  test_mbap  test_mbap.cpp  test_mbap_fixed  test_mbap_fixed.cpp  test_stable_sort  test_stable_sort.cpp
Parser/src/: AssetManager.cpp  AssetManager.h  ElasticsearchClient.cpp  ElasticsearchClient.h  PacketParser.cpp  PacketParser.h  RedisAsyncWriter.h  RedisCache.cpp  RedisCache.h  RedisConnectionPool.h  TimeBasedCsvWriter.cpp  TimeBasedCsvWriter.h  UnifiedWriter.cpp  UnifiedWriter.h  main.cpp
Parser/src/network/: network_headers.h
Parser/src/protocols/: ArpParser.cpp  ArpParser.h  BaseProtocolParser.cpp  BaseProtocolParser.h  Dnp3Parser.cpp  Dnp3Parser.h  DnsParser.cpp  DnsParser.h  GenericParser.cpp  GenericParser.h  IProtocolParser.cpp  IProtocolParser.h  ModbusParser.cpp  ModbusParser.h  S7CommParser.cpp  S7CommParser.h  TcpSessionParser.cpp  TcpSessionParser.h  UnknownParser.cpp  UnknownParser.h  XgtFenParser.cpp  XgtFenParser.h
docs/: EXECUTION-GUIDE.md  QUICK-STARD.md  README.md  START-HERE.md
operation/: .env  README.md  build-and-run.sh  docker-compose-with-parser.sh  docker-compose.yml  run-production.sh  test-elasticsearch-integration.sh  test-elasticsearch.sh
